translation-tool/inputs/source_meta/objects/Product_Grouping__c.object
<CustomObject>
    <description>Product Grouping</description>
    <fields>
        <fullName>HNS_PROD_GRP_ID__c</fullName>
        <description>Product Group ID</description>
        <externalId>true</externalId>
        <label>HNS PROD GRP ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Master_Product_Grouping__c</fullName>
        <description>Higher level abstraction for Product Grouping</description>
        <inlineHelpText>Higher level abstraction for Product Grouping</inlineHelpText>
        <label>Master Product Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <description>Salesforce ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Salesforce ID</inlineHelpText>
        <label>Salesforce ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
     <fields>
        <fullName>ProductGroupingName_esCO__c</fullName>
        <description>Stores the translated value of product grouping in Spanish(Columbia).</description>
        <inlineHelpText>Stores the translated value of product grouping in Spanish(Columbia).</inlineHelpText>
        <label>Product Grouping Name esCO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroupingName_esPA__c</fullName>
        <description>Stores the translated value of product grouping in Spanish(Panama).</description>
        <inlineHelpText>Stores the translated value of product grouping in Spanish(Panama).</inlineHelpText>
        <label>Product Grouping Name ES PA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroupingName_ptBR__c</fullName>
        <label>Product Grouping Name ptBR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Grouping_Language_Formula__c</fullName>
        <formula>CASE($Label.Common_CurrentUserLanguage, 
&apos;es_CO&apos;, ProductGroupingName_esCO__c, 
&apos;es_PA&apos;, ProductGroupingName_esPA__c, 
&apos;pt_BR&apos;, ProductGroupingName_ptBR__c,

Name 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Grouping Language Formula</label>
        <type>Text</type>
    </fields>
    <label>Product Grouping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HNS_PROD_GRP_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Salesforce_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Grouping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Groupings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>